--- a/public/css/app.css
+++ b/public/css/app.css
@@ -27,6 +27,12 @@
     .h-100 {
         height: auto !important;
     }
+    .workspace-limit {
+        max-width: fit-content !important;
+    }
+    .overflow-hidden {
+        overflow: visible !important;
+    }
     * {
         overflow: visible !important;
     }
