address element now respects new-lines

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11,6 +11,10 @@
     opacity: 1;
 }
 
+address {
+    white-space: pre-wrap;
+}
+
 .dl-horizontal {
     display: grid;
     grid-template-columns: max-content auto;
